# ot-harjoitustyo

./: .gitignore  README.md
laskarit/viikko1/: gitlog.txt
laskarit/viikko2/maksukortti/: pyproject.toml
laskarit/viikko2/poetry-testi/: pyproject.toml
laskarit/viikko3/: monopoli.md  sekvenssikaavio.md
travel-expense-calculator-app/: .env  .env.test  README.md  pyproject.toml  tasks.py
travel-expense-calculator-app/data/: travelexpenses.db
travel-expense-calculator-app/dokumentaatio/: arkkitehtuuri.md  changelog.md  kayttoohje.md  testaus.md  tuntikirjanpito.md  vaatimusmaarittely.md
travel-expense-calculator-app/src/: config.py  database_connection.py  index.py  initialize_database.py
travel-expense-calculator-app/src/entities/: participant.py  payment.py  travel.py  user.py
travel-expense-calculator-app/src/repositories/: participant_repository.py  payment_repository.py  travel_repository.py  user_repository.py
travel-expense-calculator-app/src/services/: participant_service.py  payment_service.py  travel_service.py  user_service.py  user_services.py
travel-expense-calculator-app/src/tests/: participant_repository_test.py  participant_sevice_test.py  payment_repository_test.py  payment_sevice_test.py  travel_repository_test.py  travel_service_test.py  user_repository_test.py  user_service_test.py
travel-expense-calculator-app/src/ui/: create_participant_view.py  create_payment_view.py  create_travel_view.py  create_user_view.py  login_view.py  payments_view.py  single_payment_view.py  summary_view.py  travels_view.py  ui.py
(+4 files in other folders)
