[tool.poetry]
name = "travel-expense-calculator-app"
version = "0.1.0"
description = ""
authors = ["Petteri Huvio <petteri.huvio@gmail.com>"]
readme = "README.md"
packages = [{include = "travel_expense_calculator_app"}]

[tool.poetry.dependencies]
python = "^3.8"
invoke = "^1.7.3"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
